Agregandole un metodo para cargar un archivo de excel(2003) temporalmente

--- a/monicaticoo/nbproject/project.properties
+++ b/monicaticoo/nbproject/project.properties
@@ -25,10 +25,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/monicaticoo.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jxl.jar=src\\jxl.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.jxl.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
