--- a/monicaticoo/nbproject/project.properties
+++ b/monicaticoo/nbproject/project.properties
@@ -26,11 +26,13 @@ dist.jar=${dist.dir}/monicaticoo.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jxl.jar=src\\jxl.jar
+file.reference.jxl.jar-1=/home/edward/Escritorio/jxl.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.jxl.jar}:\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.jxl.jar}
+    ${file.reference.jxl.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
