--- a/monicaticoo/nbproject/project.properties
+++ b/monicaticoo/nbproject/project.properties
@@ -25,12 +25,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/monicaticoo.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.cd-5.7_Sources.zip=C:\\Users\\Jason\\Downloads\\cd-5.7_Sources.zip
 file.reference.jxl.jar=src\\jxl.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.jxl.jar}
+    ${file.reference.jxl.jar}:\
+    ${file.reference.cd-5.7_Sources.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
