Falta uN poco N crear ciNrre de caNa

--- a/monicaticoo/nbproject/project.properties
+++ b/monicaticoo/nbproject/project.properties
@@ -30,9 +30,9 @@ file.reference.jxl.jar=src\\jxl.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.cd-5.7_Sources.zip}:\
     ${file.reference.jxl.jar}:\
-    ${file.reference.cd-5.7_Sources.zip}
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
